# haskell-unix-utilities

./: .gitignore  LICENSE  UnixUtils.cabal
cat/: Main.hs
expand/: Main.hs
iconv/: Main.hs
wc/: Main.hs
