name:              unix-utilities
version:           0.1
synopsis:          (Some) Unix utilities rewritten in Haskell.
author:            Romain Edelmann
maintainer:        romain.edelmann@gmail.com
cabal-version:     >= 1.6
build-type:        Simple
category:          Utilities
license:           BSD3
license-file:      LICENSE

source-repository head
  type:            git
  location:        https://github.com/redelmann/haskell-unix-utilities

executable h-expand
  build-depends:   base >=4.0 && <5.0, 
                   optparse-applicative >= 0.5.2.1,
                   errors >= 1.3.1,
                   split >= 0.2,
                   mtl >= 1.0
  main-is:         Main.hs
  hs-source-dirs:  expand